RESOLVED FIXED159117
DFGByteCodeParsing does not handle calling the Object constructor with no arguments correctly
https://bugs.webkit.org/show_bug.cgi?id=159117
Summary DFGByteCodeParsing does not handle calling the Object constructor with no arg...
Keith Miller
Reported 2016-06-25 11:37:12 PDT
DFGByteCodeParsing does not handle calling the Object constructor with no arguments correctly
Attachments
Patch (2.53 KB, patch)
2016-06-25 11:38 PDT, Keith Miller
no flags
Patch (2.56 KB, patch)
2016-06-25 11:39 PDT, Keith Miller
saam: review+
keith_miller: commit-queue+
Archive of layout-test-results from ews122 for ios-simulator-wk2 (671.87 KB, application/zip)
2016-06-25 12:45 PDT, Build Bot
no flags
Keith Miller
Comment 1 2016-06-25 11:38:56 PDT
Keith Miller
Comment 2 2016-06-25 11:39:56 PDT
Keith Miller
Comment 3 2016-06-25 11:43:00 PDT
Build Bot
Comment 4 2016-06-25 12:45:52 PDT
Comment on attachment 282079 [details] Patch Attachment 282079 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1569617 New failing tests: fast/scrolling/ios/scrollTo-at-page-load.html
Build Bot
Comment 5 2016-06-25 12:45:54 PDT
Created attachment 282082 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Keith Miller
Comment 6 2016-06-25 12:54:08 PDT
I highly doubt that simulator failed test is my patch. It's not obvious where in the test it would call the object constructor. All the test does is add some event listeners. Also, looking at the history for the test it looks like it was failing before, assuming the simulator is running WK1 and not WK2. http://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fscrolling%2Fios%2FscrollTo-at-page-load.html
Alexey Proskuryakov
Comment 7 2016-06-25 17:12:59 PDT
Right, there are some scrolling tests that rarely if ever fail on regular bots, but are super flaky on EWS, up to becoming false positives. This is non-trivial, because they have to fail twice with a patch, and then to pass without the patch. Bug 159086 has an even more obvious example of this. > assuming the simulator is running WK1 and not WK2 No, iOS EWS runs WK2. iOS WK1 tests are not maintained at this time.
Keith Miller
Comment 8 2016-06-27 09:48:53 PDT
Note You need to log in before you can comment on or make changes to this bug.