DFGByteCodeParsing does not handle calling the Object constructor with no arguments correctly https://bugs.webkit.org/show_bug.cgi?id=159117 <rdar://problem/26996781>

Reviewed by Saam Barati.

DFGByteCodeParsing always assumed there would be an argument to the Object constructor.
This is clearly not always the case and we should be able to handle it.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::handleConstantInternalFunction):
* tests/stress/indirect-call-object-constructor-with-no-arguments.js: Added.
(let.foo.Object.test):

Canonical link: https://commits.webkit.org/177240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202487 268f45cc-cd09-0410-ab3c-d52691b4dbfc